--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,23 +3,32 @@ name: CI
 on: [push, workflow_dispatch]
 
 jobs:
-build:
+  build:
+    runs-on: windows-latest
 
-runs-on: windows-latest
+    steps:
+    - name: Download
+      run: Invoke-WebRequest https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-windows-amd64.zip -OutFile ngrok.zip
 
-steps:
-- name: Download
-run: Invoke-WebRequest https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-windows-amd64.zip -OutFile ngrok.zip
-- name: Extract
-run: Expand-Archive ngrok.zip
-- name: Auth
-run: .\ngrok\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
-env:
-NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
-- name: Enable TS
-run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server'-name "fDenyTSConnections" -Value 0
-- run: Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
-- run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 1
-- run: Set-LocalUser -Name "runneradmin" -Password (ConvertTo-SecureString -AsPlainText "P@ssw0rd!" -Force)
-- name: Create Tunnel
-run: .\ngrok\ngrok.exe tcp 3389
+    - name: Extract
+      run: Expand-Archive -Path ngrok.zip -DestinationPath .
+
+    - name: Auth
+      run: .\ngrok\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
+      env:
+        NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
+
+    - name: Enable TS
+      run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' -Name "fDenyTSConnections" -Value 0
+
+    - name: Enable Firewall Rule
+      run: Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
+
+    - name: User Authentication
+      run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -Name "UserAuthentication" -Value 1
+
+    - name: Set Local User Password
+      run: Set-LocalUser -Name "runneradmin" -Password (ConvertTo-SecureString -AsPlainText "P@ssw0rd!" -Force)
+
+    - name: Create Tunnel
+      run: .\ngrok\ngrok.exe tcp 3389
